--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ a{
     position: absolute;
     width: 862px;
     height: 225px;
-    left:334px;
+    left:303px;
     top: 66px;
     font-family: 'Work Sans';
     font-style: normal;
@@ -73,7 +73,7 @@ a{
     position: absolute;
     width: 813px;
     height: 52px;
-    left: 416px;
+    left:401px;
     top: 379px;
     font-family: 'Work Sans';
     font-style: normal;
@@ -98,11 +98,72 @@ a{
 }
 .banner-1{
     position: absolute;
-width:58%;
-height: 700px;
-left: 240px;
-top: 577px;
+    width: 55%;
+    height: 700px;
+    left:241px;
+    top: 577px;
+    background: url(../images/banner.png);
+    border-radius: 8px;
+}
+.section-container{
+    position: absolute;
+width: 342px;
+height: 342px;
+left: 301px;
+top: 1407px;
+}
+.image-section{
+    display: flex;
+    gap: 8px;
+    margin-bottom: 7px;
+    margin-left: -94px;
+}
+.section-container-secondrow{
 
-background: url('../images/banner.png');
-border-radius: 8px;
+}
+.secondrow-title{
+    position: absolute;
+    width: 468px;
+    height: 106px;
+    right: -230%;
+    top: 160px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 53px;
+    color: #727272;
+}
+/* some titile bold color in black */
+b{
+    color: #131313;
+}
+
+/* some different color span tag*/
+span{
+    color:#FF900E;
+}
+.secondrow-subtitle{
+    position: absolute;
+    width: 517px;
+    height: 78px;
+    left: 660px;
+    top: 314px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-size: 13px;
+    line-height: 26px;
+    color: gray;
+}
+.secondrow-button{
+    position: absolute;
+    width: 151px;
+    height: 57px;
+    left: 660px;
+    top: 439px;
+    background: #FF900E;
+    border-radius: 8px;
+    color: white;
+    font-size: 17px;
+    border: navajowhite
 }
