--- a/styles/style.css
+++ b/styles/style.css
@@ -305,3 +305,225 @@ background: #FF900E;
     background: url(../images/architect.png);
     border-radius: 8px;
 }
+.thirdbutton{
+    position: absolute;
+    width: 157px;
+    height: 85px;
+    left: 531px;
+    top: 1533px;
+    font-size: 23px;
+    color: white;
+    background-color: orange;
+    border: navajowhite;
+    border-radius: 3px;
+}
+.forth-title{
+    position: absolute;
+    width: 258px;
+    height: 53px;
+    left: -106px;
+    top: 1664px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #131313;
+}
+.forth-subtitle{
+    position: absolute;
+    width: 544px;
+    height: 52px;
+    left: -107px;
+    top: 1756px;
+    font-family: 'Work Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+}
+.forth-box{
+    box-sizing: border-box;
+    position: absolute;
+    width: 238px;
+    height: 218px;
+    left: -74px;
+    top: 1883px;
+    border-radius: 7px;
+    border: 1px solid #FF900E;
+    /*transform: rotate(90deg);*/
+}
+.forthimg{
+    position: absolute;
+    width: 66.22px;
+    height: 62px;
+    left: 87px;
+    top:35px;
+}
+.forth-boxtitle{
+    position: absolute;
+    width: 102px;
+    height: 53px;
+    left: 67px;
+    top:69px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 53px;
+    text-align: center;
+    color: #424242;
+}
+.forth-boxsubtitle{
+    position: absolute;
+    width: 169px;
+    height: 23px;
+    left: 48px;
+    top: 141px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 23px;
+    color: #727272;
+}
+.forth-box-1{
+    box-sizing: border-box;
+    position: absolute;
+    width: 238px;
+    height: 218px;
+    left: 263px;
+    top: 1883px;
+    border: 1px solid #FF900E;
+    border-radius: 7px;
+    /*transform: rotate(90deg);*/
+}
+.forthimg-1{
+    position: absolute;
+    width: 66.22px;
+    height: 62px;
+    left: 87px;
+    top:35px;
+}
+.forth-boxtitle-1{
+    position: absolute;
+    width: 102px;
+    height: 53px;
+    left: 67px;
+    top:69px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 53px;
+    text-align: center;
+    color: #424242;
+}
+.forth-boxsubtitle-1{
+    position: absolute;
+    width: 169px;
+    height: 23px;
+    left: 48px;
+    top: 141px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 23px;
+    color: #727272;
+}
+
+
+.forth-box-2{
+    box-sizing: border-box;
+    position: absolute;
+    width: 238px;
+    height: 218px;
+    left:616px;
+    top: 1883px;
+    border: 1px solid #FF900E;
+    border-radius: 7px;
+    /*transform: rotate(90deg);*/
+}
+.forthimg-2{
+    position: absolute;
+    width: 66.22px;
+    height: 62px;
+    left: 87px;
+    top:35px;
+}
+.forth-boxtitle-2{
+    position: absolute;
+    width: 102px;
+    height: 53px;
+    left: 67px;
+    top:69px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 53px;
+    text-align: center;
+    color: #424242;
+}
+.forth-boxsubtitle-2{
+    position: absolute;
+    width: 169px;
+    height: 23px;
+    left: 48px;
+    top: 141px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 23px;
+    color: #727272;
+}
+
+
+
+.forth-box-3{
+    box-sizing: border-box;
+    position: absolute;
+    width: 238px;
+    height: 218px;
+    left:950px;
+    top: 1883px;
+    border: 1px solid #FF900E;
+    border-radius: 7px;
+    /*transform: rotate(90deg);*/
+}
+.forthimg-3{
+    position: absolute;
+    width: 66.22px;
+    height: 62px;
+    left: 87px;
+    top:35px;
+}
+.forth-boxtitle-3{
+    position: absolute;
+    width: 102px;
+    height: 53px;
+    left: 67px;
+    top:69px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 53px;
+    text-align: center;
+    color: #424242;
+}
+.forth-boxsubtitle-3{
+    position: absolute;
+    width: 169px;
+    height: 23px;
+    left: 48px;
+    top: 141px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 23px;
+    color: #727272;
+}
